@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.1407 2003/09/03 13:42:58 paultucker Exp $
+ * $Id: ChangeLog,v 1.1408 2003/09/03 13:45:36 paultucker Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,13 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2003-09-03 20:45 UTC-0300 Marcelo Lombardo <lombardo@uol.com.br>
+  * source/vm/inet.c
+    changed InetRecvEenBlock 2nd parameter so it can be an end block
+    string (as it was before) or an array with "n" possible end block
+    strings
+
 2003-09-03 09:45 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
   * contrib/libmisc/makefile.vc
     - dbftools.c since it's now in libct
